<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:paddingStart="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    tools:context=".RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp">

            <ImageView
                android:id="@+id/login_iv_appicon"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/shoppingapp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/store"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/store"
                android:gravity="center"
                android:text="@string/please_enter_your_info_to_create_account"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:background="#fff"
                    android:fontFamily="@font/store"
                    android:inputType="text"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:background="#fff"
                    android:fontFamily="@font/store"
                    android:inputType="phone"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:background="#fff"
                    android:fontFamily="@font/store"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/register_btn_register"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/store"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/login_tv_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/store"
                android:text="أنا آدمن"
                android:textColor="@color/icons"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center">

                <TextView
                    android:id="@+id/tv_have_not_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:fontFamily="@font/store"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/mr_cast_meta_black_scrim"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/register_tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:fontFamily="@font/store"
                    android:text="@string/login"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>