<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:paddingStart="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp">

            <ImageView
                android:id="@+id/login_iv_appicon"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/shoppingapp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/store"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/store"
                    android:inputType="phone"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/store"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/login_cb_rememberme"
                    style="@style/Material.Drawable.CheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/store"
                    android:text="@string/rememberme"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/login_tv_forgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/store"
                    android:gravity="end|center_vertical"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/store"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_18ssp" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="@dimen/_10sdp"-->
            <!--                android:gravity="center"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:visibility="gone">-->

            <!--                <view-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="1dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:background="@color/divider" />-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="@dimen/_5sdp"-->
            <!--                    android:fontFamily="@font/store"-->
            <!--                    android:text="OR"-->
            <!--                    android:textSize="@dimen/_14ssp"-->
            <!--                    android:textStyle="bold" />-->

            <!--                <view-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="1dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:background="@color/divider" />-->


            <!--                &lt;!&ndash;                <TextView&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:id="@+id/login_tv_clickhere"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:layout_width="wrap_content"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:layout_gravity="left"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:visibility="gone"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:fontFamily="@font/store"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:text="@string/clickhere"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:textColor="?attr/colorAccent"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:textSize="@dimen/_14ssp"&ndash;&gt;-->
            <!--                &lt;!&ndash;                    android:textStyle="bold" />&ndash;&gt;-->

            <!--            </LinearLayout>-->


            <TextView
                android:id="@+id/login_tv_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/store"
                android:text="@string/iamadmin"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_tv_notAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/store"
                android:text="@string/not_addmin"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center"
                android:gravity="bottom|center">

                <TextView
                    android:id="@+id/tv_have_not_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:fontFamily="@font/store"
                    android:gravity="bottom"
                    android:text="@string/havenot"
                    android:textColor="@color/mr_cast_meta_black_scrim"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_tv_clickhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:fontFamily="@font/store"
                    android:gravity="bottom"
                    android:text="@string/clickhere"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>